# blockhead

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
blockhead/: interval_tree.py  util.py  visual.py
notebooks/: arma.ipynb  explore_scale_space.ipynb  real_data_example.ipynb  synthetic_demo.ipynb
notebooks/applications/: SnakeRiver.ipynb  U1559_NGR.ipynb  snakeriver.ipynb
notebooks/sample_data/: README.md
tests/: test_blockhead.py  test_interval_tree.py  test_utils.py
ui/back-end/: Main.py  Plot.py  download.py  otherplot.py
ui/front-end/well-logged/: package-lock.json  package.json
ui/front-end/well-logged/src/: App.css  App.js
ui/front-end/well-logged/src/components/: InputMenu.jsx  Menus.jsx
ui/front-end/well-logged/src/interactions/: CreateGridBG.jsx  UploadFile.jsx
