[tool.poetry]
name = "blockhead"
version = "0.1.0"
description = ""
authors = ["Vape Jordan <blasscoc@gmail.com>",
           "Brendon Hall"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.3"
numpy = "^1.23.0"
scipy = "^1.8.1"
matplotlib = "^3.5.1"
imageio = "^2.19.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
