[tool.poetry]
name = "blockhead"
version = "0.1.0"
description = ""
authors = ["Vape Jordan <blasscoc@gmail.com>",
           "Brendon Hall"]
packages = [
    { include = "blockhead", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^2.1.2"
imageio = "^2.35.1"
lasio = "^0.31"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
scipy = "^1.14.1"
scikit-image = "^0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
